fix settings and build.gradle