@@ -43,7 +43,7 @@ tasks.withType<JavaCompile>().configureEach {
 }
 
 tasks.withType<JavaExec>().configureEach {
-    jvmArgs = listOf("--enable-preview", "-XX:+UseNUMA", "-XX:+UseParallelGC")
+    jvmArgs = listOf("--enable-preview", "-XX:+UseNUMA", "-XX:+UseParallelGC", "--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
 
 group = "me.ricnorr"
